--- a/Makefile.in
+++ b/Makefile.in
@@ -1,6 +1,6 @@
 LDFLAGS+=@LDFLAGS@
 LIBS+=@LIBS@ @LIBCURL@
-CFLAGS+=@CPPFLAGS@ @CFLAGS@ @LIBCURL_CPPFLAGS@
+CFLAGS+=-Wall @CPPFLAGS@ @CFLAGS@ @LIBCURL_CPPFLAGS@
 
 #Set a few distribution variables
 DISTNAME=@PACKAGE_NAME@-@PACKAGE_VERSION@
