Make the use of apxs/apxs2 consistent in the configure script.
The configure script advertised a --with-apxs option. That option did
what it was supposed to, except that the configure script would
complain that --with-apxs was not a supported option. The problem was
that the argument was defined as --with-apxs2 in one spot, but used as
--with-apxs elsewhere.

This change resolves the naming conflict in ./configure in favor of
--with-apxs rather than --with-apxs2.

--- a/configure.ac
+++ b/configure.ac
@@ -28,7 +28,7 @@ AM_PROG_CC_C_O
 AC_DEFUN([CHECK_APXS],[
     AC_MSG_CHECKING(for Apache apxs)
     AC_ARG_WITH(
-        apxs2,
+        apxs,
         [  --with-apxs=FILE        location of the Apache apxs utility],  
     [if test -x "${with_apxs}" ; then
         apxs_found="${with_apxs}"
