--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -13,5 +13,6 @@ check_PROGRAMS = check_mac
 check_mac_SOURCES = ap_stubs.c curl_stubs.c openssl_stubs.c ../src/mod_auth_cas.c mod_auth_cas_test.c
 check_mac_LDADD = -lcheck -lapr-1 -laprutil-1
 check_mac_CFLAGS = @CHECK_CFLAGS@ ${AM_CFLAGS}
-check_mac_LDFLAGS = @CHECK_LDFLAGS@ ${AM_LDFLAGS}
+check_mac_LIBS = @CHECK_LIBS@ ${AM_LIBS}
+check_mac_LDFLAGS = ${AM_LDFLAGS}
 endif
