revert Makefile changes for warning-free compile

--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -122,7 +122,7 @@ AUTOMAKE = @AUTOMAKE@
 AWK = @AWK@
 CC = @CC@
 CCDEPMODE = @CCDEPMODE@
-CFLAGS = -Wall -Werror @CFLAGS@
+CFLAGS = @CFLAGS@
 CHECK_CFLAGS = @CHECK_CFLAGS@
 CHECK_LIBS = @CHECK_LIBS@
 CPP = @CPP@
