Cleaned up automake variables, added required -Wall -Werror if supported by compiler.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,9 +1,7 @@
 ACLOCAL_AMFLAGS = -I m4
-INCLUDES = $(INCLTDL)
-
-LDFLAGS+=@LDFLAGS@
-LIBS+=@LIBS@ @LIBCURL@
-CFLAGS+=@CPPFLAGS@ @CFLAGS@ @LIBCURL_CPPFLAGS@
+AM_CPPFLAGS = @INCLTDL@ @LIBCURL_CPPFLAGS@ -D_LARGEFILE64_SOURCE
+AM_LIBS = @LIBCURL@
+AM_CFLAGS = @TEST_COVERAGE_CFLAGS@ 
 
 #Set a few distribution variables
 DISTNAME=@PACKAGE_NAME@-@PACKAGE_VERSION@
