--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,12 +1,11 @@
-AM_CFLAGS = @CPPFLAGS@ @CFLAGS@ @LIBCURL_CPPFLAGS@ \
-@APR_CPPFLAGS@ \
-@APR_CPPFLAGS@ \
-@APR_INCLUDES@ \
-@APACHE_INCLUDES@ \
-@TEST_COVERAGE_CFLAGS@ \
--D_LARGEFILE64_SOURCE @LIBS@ @LIBCURL@
 
-AM_LDFLAGS= @LDFLAGS@
+AM_CPPFLAGS = @INCLTDL@ @LIBCURL_CPPFLAGS@ -D_LARGEFILE64_SOURCE \
+ @APXS_CPPFLAGS@ @APXS_INCLUDES@ @APR_CPPFLAGS@ @APR_INCLUDES@ \
+ @APACHE_INCLUDES@
+AM_LIBS = @LIBCURL@ @APXS_LIBS@
+AM_CFLAGS = @TEST_COVERAGE_CFLAGS@ 
+AM_LDFLAGS = @APXS_LDFLAGS@
+
 TESTS=
 if CHECK
 TESTS += check_mac
