Fix src/Makefile.in inclusion of -lcurl in AM_LIBS

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,7 +8,7 @@ lib_LTLIBRARIES = mod_auth_cas.la
 mod_auth_cas_la_LDFLAGS= -module ${AM_CFLAGS}
 
 mod_auth_cas.la: mod_auth_cas.c mod_auth_cas.h
-	@APXS@ -c ${LIBS} -Wc,"${CPPFLAGS} ${AM_CPPFLAGS} ${CFLAGS} ${AM_CFLAGS}" -Wl,"${AM_LDFLAGS} ${LDFLAGS} ${AM_LIBADD} ${LIBS}" mod_auth_cas.c
+	@APXS@ -c ${LIBS} -Wc,"${CPPFLAGS} ${AM_CPPFLAGS} ${CFLAGS} ${AM_CFLAGS}" -Wl,"${AM_LDFLAGS} ${LDFLAGS} ${AM_LIBS} ${LIBS}" mod_auth_cas.c
 
 install: mod_auth_cas.la
 	if test ! -d ${DESTDIR}${APXS_LIBEXECDIR}; then mkdir -p ${DESTDIR}${APXS_LIBEXECDIR}; fi
