1. Fix off by one read 2. Alter logging so as not to include sensitive info (i.e. valid cookies) 3. Style fixes. 4. Compile warning fixes.

--- a/Makefile.in
+++ b/Makefile.in
@@ -770,7 +770,7 @@ clean:
 distclean: clean
 	cd src && $(MAKE) $@
 	cd tests && $(MAKE) $@
-	rm -rf config.h config.h.in~ config.log config.status autom4te.cache Makefile 
+	rm -rf config.h config.h.in~ config.log config.status autom4te.cache Makefile stamp-h1
 
 baseclean: distclean
 	rm -rf configure
