Add 'pretty' make target as first step toward enforcing code style

--- a/Makefile.am
+++ b/Makefile.am
@@ -41,3 +41,6 @@ ${DISTBALL}:
 	mkdir -p ${DISTDIR}
 	cp --parents ${DISTFILES} ${DISTDIR}
 	tar -czvf ${DISTBALL} ${DISTDIR}
+
+pretty:
+	cd src && $(MAKE) $@
