Fix #63 APACHE_INCLUDES in tests/Makefile.am
Remove extraneous APACHE_INCLUDES from tests/Makefile.am, as reported
by Joel Goguen in #63

--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -521,8 +521,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AM_CPPFLAGS = @INCLTDL@ @LIBCURL_CPPFLAGS@ -D_LARGEFILE64_SOURCE \
- @APXS_CPPFLAGS@ @APXS_INCLUDES@ @APR_CPPFLAGS@ @APR_INCLUDES@ \
- @APACHE_INCLUDES@
+ @APXS_CPPFLAGS@ @APXS_INCLUDES@ @APR_CPPFLAGS@ @APR_INCLUDES@
 
 AM_LIBS = @LIBCURL@ @APXS_LIBS@
 AM_CFLAGS = @TEST_COVERAGE_CFLAGS@ 
