Updated autotools for v1.1 release

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -9,7 +9,7 @@ TESTS=
 if CHECK
 TESTS += check_mac
 check_PROGRAMS = check_mac
-check_mac_SOURCES = ap_stubs.c curl_stubs.c openssl_stubs.c ../src/mod_auth_cas.c mod_auth_cas_test.c ../src/cas_saml_attr.c cas_saml_attr_test.c
+check_mac_SOURCES = ap_stubs.c curl_stubs.c openssl_stubs.c  mod_auth_cas_test.c cas_saml_attr_test.c #../src/mod_auth_cas.c ../src/cas_saml_attr.c
 check_mac_LDADD = -lcheck -lapr-1 -laprutil-1
 check_mac_CFLAGS = @CHECK_CFLAGS@ ${AM_CFLAGS}
 check_mac_LIBS = @CHECK_LIBS@ ${AM_LIBS}
